Revert "Enhetstester for henting av arbeidsland og bostedsland"